KIO jobs cannot be started from the non-UI thread. Now when updating the database from 0.9, we used a KIO job from a worker thread, and this worked well for this job. But in this case internal KIO objects (KIO::Scheduler) will be created in this worker thread, so all following usage of KIO from the main thread will fail, which caused the effect that no images are visible after the first start when updating. Fix with using QFile::copy methods in SchemaUpdater.

(KIO should enforce not being used from worker thread in KIO::Scheduler construction;
 or, there do not seem to be too large obstacles for creating per-thread usage to remove
 the restriction)

BUG: 181792

svn path=/trunk/extragear/graphics/digikam/; revision=918131